<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Coffee First</string>
    <string name="toppings">Toppings</string>
    <string name="nameHint">Name</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="toastmsg">You can not have more than 100 cups of coffee!</string>
    <string name="coffeeOrder">Coffee Order for: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="NAME">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="QUANTITY">Quantity: </string>
    <string name="WHIPPEDCREAM">Add Whipped Cream? </string>
    <string name="CHOC">Add Chocolate? </string>
    <string name="total">Total: </string>
    <string name="thankyou">Thankyou!</string>



</resources>
